Add testing and checking targets to Makefile for CBE and PBE

--- a/cpp_implementation/makefile
+++ b/cpp_implementation/makefile
@@ -7,3 +7,16 @@ all:
 clean:
 	rm exec/CBE exec/PBE
 	rm CBE PBE
+	rm io_test/CBE.sam.tmp.out io_test/PBE.sam.tmp.out
+
+check:
+	@echo "Checking files..."
+	@ls src
+
+test:
+	@echo "Checking files..."
+	@ls io_test
+	@echo "Testing CBE..."
+	./CBE < io_test/CBE.sam.in > io_test/CBE.sam.tmp.out
+	@echo "Testing PBE..."
+	./PBE < io_test/PBE.sam.in > io_test/PBE.sam.tmp.out
